Update and rename index (2).html to index.html

--- a/index.html
+++ b/index.html
@@ -970,9 +970,9 @@
         });
 
         // OpenAI API integration setup
-        // IMPORTANT: Replace 'YOUR_OPENAI_API_KEY' with your actual OpenAI API key.
+        // IMPORTANT: Replace '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' with your actual OpenAI API key.
         // For security, in production, calls to OpenAI API should be done server-side.
-        const OPENAI_API_KEY = 'YOUR_OPENAI_API_KEY';
+        const OPENAI_API_KEY = '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';
 
         async function callOpenAI(prompt, maxTokens = 500) {
             try {
